fix: alignment of navbar

--- a/common/common.scss
+++ b/common/common.scss
@@ -75,7 +75,7 @@ p {
   height: 100%;
   background-color: transparent;
   overflow:visible;
-  max-height: 5vw;
+  max-height: 4em;
 }
 
 @media screen and (max-width: 812px){
@@ -92,15 +92,19 @@ p {
   }
   & > li > a {
     background-color: transparent;
-    border-bottom-width: 5px;
+    border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: transparent;
-    padding: 0.75em 1.5em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    padding-top: 0.75rem;
+    margin-top:0;
+    padding-bottom: 0.75;
     color: lighten($primary, 30);
     text-transform: uppercase;
     font-size: 0.75rem;
     letter-spacing: 0.05em;
-    line-height: 1.7rem;
+    line-height: 1rem;
     &:hover {
       animation-name: hover-anim;
       animation-duration: 0.25s;
@@ -145,6 +149,8 @@ p {
   ol.category-breadcrumb {
     margin-bottom: 0;
     padding-left: 1rem;
+    line-height: 1rem;
+    padding-top: 0.75rem;
   }
   .select-kit {
     float: none;
